--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 asyncclick==8.1.8.0
 asyncpg==0.30.0
+bcrypt==4.3.0
 certifi==2025.4.26
 cfgv==3.4.0
 charset-normalizer==3.4.2
@@ -11,6 +12,7 @@ click==8.1.8
 colorama==0.4.6
 dictdiffer==0.9.0
 distlib==0.3.9
+ecdsa==0.19.1
 fastapi==0.115.12
 filelock==3.18.0
 h11==0.16.0
@@ -20,15 +22,20 @@ iso8601==2.1.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 nodeenv==1.9.1
+pillow==11.2.1
 platformdirs==4.3.8
 pre_commit==4.2.0
+pyasn1==0.4.8
 pydantic==2.11.4
 pydantic_core==2.33.2
 pypika-tortoise==0.5.0
+python-jose==3.4.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 tomlkit==0.13.2
