--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.8
 colorama==0.4.6
 dictdiffer==0.9.0
 distlib==0.3.9
+dotenv==0.9.9
 ecdsa==0.19.1
 fastapi==0.115.12
 filelock==3.18.0
@@ -29,6 +30,7 @@ pyasn1==0.4.8
 pydantic==2.11.4
 pydantic_core==2.33.2
 pypika-tortoise==0.5.0
+python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
 pytz==2025.2
