--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,13 @@
 aerich==0.9.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.9.0
 asyncclick==8.1.8.0
 asyncpg==0.30.0
+attrs==25.3.0
 bcrypt==4.3.0
 certifi==2025.4.26
 cfgv==3.4.0
@@ -16,16 +20,19 @@ dotenv==0.9.9
 ecdsa==0.19.1
 fastapi==0.115.12
 filelock==3.18.0
+frozenlist==1.6.0
 h11==0.16.0
 identify==2.6.10
 idna==3.10
 iso8601==2.1.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+multidict==6.4.3
 nodeenv==1.9.1
 pillow==11.2.1
 platformdirs==4.3.8
 pre_commit==4.2.0
+propcache==0.3.1
 pyasn1==0.4.8
 pydantic==2.11.4
 pydantic_core==2.33.2
@@ -48,3 +55,4 @@ urllib3==2.4.0
 uvicorn==0.34.2
 virtualenv==20.31.2
 websockets==15.0.1
+yarl==1.20.0
