--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:16
-    container_name: main_db
+    container_name: ttt_main_db
     environment:
       POSTGRES_DB: tic_tac_toe_db
       POSTGRES_USER: postgres
