--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
