--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,8 @@ fastapi==0.115.12
 filelock==3.18.0
 frozenlist==1.6.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 identify==2.6.10
 idna==3.10
 iso8601==2.1.0
