--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
+    "lightningcss-linux-x64-musl": "^1.30.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
